# schemas

./: .gitignore  README.md  mise.toml  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/: publish.yml
.github/workflows/: publish.yml
.schemastore/: README.md
.schemastore/proxy/: config.schema.json
schemas/proxy/: README.md  config.schema.json  openapi.yaml  package.json  pyproject.toml  schema.graphql
